# mlops_microservices

./: README.md
inference_service/: Makefile  pyproject.toml  setup.cfg
inference_service/app/: run.py
inference_service/app/api/: prediction.py
inference_service/app/schema/: apartment.py
inference_service/app/services/: __init__.py
