[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["Harsh Biren Vora <62307832+harsh91274@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pydantic = "^2.9.2"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
scikit-learn = "^1.5.2"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
